<resources>
    <string name="app_name">Explore KiiT</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="attendance">Attendance</string>
    <string name="logo">Logo</string>
    <string name="hello_world">Hello World</string>
    <string name="gradient">Gradient</string>
    <string name="login_icon">Login Icon</string>
    <string name="to_get_started">to get started!</string>
    <string name="email">Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="background">background</string>
    <string name="kiitlogo">kiitlogo</string>
    <string name="login_button">login button</string>
    <string name="skip_login">skip login</string>
    <string name="login">Login</string>
    <string name="loggedin">Loggedin</string>
    <string name="logout">logout</string>
    <string name="logout_text">LOGOUT</string>
    <string name="username">username</string>
    <string name="home">Home</string>
    <string name="notification">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="visit_site">Visit Site</string>
    <string name="logout_side_menu">Logout</string>
    <string name="ajay_khatri_chhetri">Ajay Khatri Chhetri</string>
    <string name="sidemenu_pp">sidemenu_pp</string>
    <string name="first_year_student">First Year Student</string>
    <string name="profile_bg">profile bg</string>
    <string name="student_name">Student Name</string>
    <string name="roll_no">Roll No.</string>
    <string name="_21053264">21053264</string>
    <string name="scse">SCSE</string>
    <string name="semester_currently_pursuing">Semester (currently pursuing)</string>
    <string name="school">School</string>
    <string name="your_attendance_nstatus">Your Attendance\nStatus</string>
    <string name="_0">0%</string>
    <string name="goto_kiit_portal">Goto KiiT Portal</string>
    <string name="semester_current">Semester (current)</string>
    <string name="_1st_stage">1st Stage</string>
    <string name="notiTitle">Winter Vacation</string>
    <string name="notiDetail">It is to be notified that winter vacation from Dec 21 to Jan2 is provided to the students.</string>
    <string name="profile">Profile</string>
    <string name="a_project_by_ajay_khatri">A Project by Ajay Khatri.</string>
    <string name="copyright_2021_all_rights_reserved">© Copyright 2021 - All Rights Reserved</string>
    <string name="notifications">Notifications</string>
    <string name="change_image">Change Image</string>
    <string name="contact_no">Contact No.</string>
    <string name="_977_9867234454">+977 9867234454</string>
    <string name="tilottama_nepal">Tilottama, Nepal</string>
    <string name="personal_details">Personal Details</string>
    <string name="address">Address</string>
    <string name="go_to_kiit_portal">Go to KiiT Portal</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profile">Edit</string>
    <string name="logout1">Logout</string>
    <string name="title_activity_bottom">Bottom</string>
    <string name="societies">Societies</string>
    <string name="academics">Academics</string>
    <string name="campus_life">Campus Life</string>
    <string name="placements">Placements</string>
    <string name="recent_events_at_kiit">Recent Events at KiiT</string>
    <string name="view_all">View All</string>
    <string name="january_21_2022_to_january_22_2022">January 21, 2022 to January 22, 2022</string>
    <string name="kiit_deemed_to_be_university">KIIT Deemed to be University</string>
    <string name="_1st_international_conference_on_smart_technology_for_power_and_green_energy_stpge_2022">1st International Conference On Smart Technology for Power and Green Energy (STPGE-2022)</string>
    <string name="virtual_tour">Virtual Tour?</string>
    <string name="want_a">Want a</string>
    <string name="model_un_society">Model UN Society</string>
    <string name="model_nun_society">Model \nUN Society</string>
    <string name="s1">Model UN Society organises its flagship annual event – KIIT International Model United Nations. Held in collaboration with UNFPA and US Consulate General, Hyderabad, the last year’s edition was attended by 1800 student-delegates from all corners of India and 20 countries.</string>
    <string name="s2">KIIT Entrepreneurship-Cell is primarily responsible for fostering entrepreneurship culture amongst the students and assisting budding entrepreneurs by providing them with necessary guidance and resources.</string>
    <string name="s3">Qutopia is the quizzing society of KIIT. It was founded in 2004 with the motto, ‘Quiz for Quiz’s Sake’. It was born out of a desire to learn more about the world and beyond as well as an urge to share what we know.</string>
    <string name="s4">This group is specifically meant for the students who have a deep craving for exploring the intricacies of music and dance. Korus is a haven for the budding musicians and dancers and equips the students with all the adequate resources for the proper channelization of their skills. This community performs on all major occasions like Republic Day, Independence Day, KIIT Foundation Day, etc.</string>
    <string name="s5">KIIT Automotive Society (KAS) was started in 2009 to give the student an active learning platform and increase their interest in the field of automobile. The Society has won prestigious competitions at national and international level.</string>
    <string name="s6">KIIT Aeronautical Society aims to promote scientific and educational activities towards the advancement of the theory and practice of aeronautical engineering.</string>
    <string name="s7">The Robotics Society focuses on research, knowledge sharing and learning with the aim of embracing new technology and making new discoveries in the field of robotics with a high standard of ethics.</string>
    <string name="s8">The Cooking Society is the forum where food becomes cuisine and the kitchen becomes a platter in the hands of budding chefs and the enthusiasts at heart.</string>
    <string name="s9">Kreative Eye, the photography &amp; painting society of KIIT, provides a platform to the budding photographers and artists to showcase their talents. This society organizes several events like photography and painting competitions all the year round particularly on occasions like Independence Day, Republic Day, KIIT Foundation Day, World AIDS Day, etc. This society also handles the posters for the various events that are held at KIIT.</string>
    <string name="s10">A society exclusively dedicated for the physically disabled helps people with disabilities get together. It welcomes members who are strongly motivated to work for the differently able populace of the world – any form, any kind.</string>
    <string name="s11">Social Responsibility Cell acts as a motivator for young students to come together from all walks of life and join together to be the harbinger of light in the lives of those who have been deprived of it. ‘Kartavya’ is its flagship event.</string>
    <string name="s12">The Women’s Society promotes equality for women. They not only believe in providing women a better platform, but also in encouraging them to be the torch bearers.</string>
    <string name="s13">KIIT International Student Society is a great source of social support and representation to sizeable international student body in KIIT University. They not only learn and grow, but also promote their culture, traditions and heritage. It organizes various events during annual cultural function. It celebrates International Student Day ‘Khesthen’ every year with great joy.</string>
    <string name="s14">The Hindi Society of KIIT promotes Rashtrabhasha. It brings out the best poets and writers of the University to portray their dreams on papers.</string>
    <string name="s15">It gives platform to the students to bring out the most expressive and creative skills of film making. The society also plays a major role in the making of the official videos of the University.</string>
    <string name="s16">KIIT Dramatic Society provides a platform to hone acting skills, express views through various acts, drama, mimicry, stand up comedies, talks and events relating to this field. KIIT Dramatic society was started in 2011 and already has a significant number of productions. It has to its credit, performing in front of the Prime Minister of India and Prime Minister of Bhutan during their visits to KIIT.</string>
    <string name="s17">Konnexions deals with all aspects of web development and information technology in industry, administration, teaching, research and science. Its primary aim is to promote the scientific and technical development of web development and information technology and their practical application. The Society prepares the students for the ever changing world of internet.</string>
    <string name="s18">Society for Alumni Connect strives to create and maintain a life-long connection between the University and its alumni, who number more than 20,000.</string>
    <string name="s19">The pen often proves to be mightier than the sword. Wordsmith is the platform where the students can express their ingenious, unorthodox, profound thoughts through the pen. The Society publishes ‘Kritika’, the annual magazine, and ‘Kirti’, the women’s magazine. Monthly newsletters are e-magazines are two of its other projects.</string>
    <string name="s20">Fashion helps define tastes and shapes tastes of individuals. It plays an important role in personality development of a person. This newly created society helps inculcate proper dressing sense among the students according to the occasion.</string>
    <string name="s21">Events conducted by Marketing Society are designed to give students a deep working insight into what marketing is really about. This Society provides students an all-round experience of marketing through industry exposure and on-campus fun marketing activities.</string>
    <string name="s22">Finance Society hones the students’ management skills by organizing events related to the various aspects of finance. This society brings together group-work, leadership skills, creativity, management principles and general camaraderie in an entertaining way.</string>
    <string name="s23">‘Kimaya – An Endeavour to Understand’ aims to provide a platform for the congregation of the entire medical fraternity of Odisha and beyond.</string>
    <string name="_23">23</string>
    <string name="world_class_campuses">World Class Campuses</string>
    <string name="quick_facts">Quick Facts</string>
    <string name="faculty_amp_researchers"><![CDATA[Faculty & Researchers]]></string>
    <string name="_2500">2500</string>
    <string name="_30_000">30,000+</string>
    <string name="students">Students</string>
    <string name="_16">16</string>
    <string name="sports_complexes_with_swimming_pools">Sports Complexes with Swimming Pools</string>
    <string name="_15">15</string>
    <string name="food_courts">Food Courts</string>
    <string name="_25">25</string>
    <string name="sq_km_academic_ntownship">Sq. km. Academic\nTownship</string>
</resources>