<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSettingsActivity">

<!--    App Bar-->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarLayout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/accsettings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/white_gray_border_tabs">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="-27dp"
                    android:padding="20dp"
                    android:src="@drawable/left_arrow" />

                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/productsansbold"
                    android:text="@string/edit_profile"
                    android:textColor="#3d3d3d"
                    android:textSize="20sp" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

<!--    Profile Image-->
    <androidx.cardview.widget.CardView
        android:id="@+id/editpp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="100dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:layout_marginTop="25dp"
        android:layout_below="@id/appBarLayout">
    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/edit_profile_pp"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/default_profile"
        android:layout_centerHorizontal="true"
       />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/changeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editpp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/productsansbold"
        android:text="@string/change_image"
        android:textAlignment="center"
        android:textColor="@color/secCol"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/personalDetailsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeImage"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/productsansbold"
        android:text="@string/personal_details"
        android:textColor="@color/priCol"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/personalDetailsText"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/productsansregular"
        android:hint="@string/student_name"
        android:inputType="text"
        android:textColor="#3d3d3d"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editname"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/productsansregular"
        android:hint="@string/roll_no"
        android:inputType="text"
        android:textColor="#3d3d3d"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/editsem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editroll"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/productsansregular"
        android:hint="@string/semester_current"
        android:inputType="text"
        android:textColor="#3d3d3d"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editcontact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editsem"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/productsansregular"
        android:hint="@string/contact_no"
        android:inputType="text"
        android:textColor="#3d3d3d"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editcontact"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/productsansregular"
        android:hint="@string/address"
        android:inputType="text"
        android:textColor="#3d3d3d"
        android:textSize="18sp" />

    <Button
        android:id="@+id/saveChanges"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/editaddress"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/productsansregular"
        android:text="@string/save_changes"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/gotoPortal"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/saveChanges"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#787878"
        android:fontFamily="@font/productsansregular"
        android:text="@string/go_to_kiit_portal"
        android:textAllCaps="false"
        android:textSize="18sp" />




</RelativeLayout>