<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/sidemenu_nav_bg">

    <ImageView
        android:contentDescription="@string/sidemenu_pp"
        android:id="@+id/pp_sidemenu"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/pp_side_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:fontFamily="@font/productsansbold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/ajay_khatri_chhetri"
        app:layout_constraintTop_toBottomOf="@id/pp_sidemenu"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="16sp"
        android:fontFamily="@font/productsansregular"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/first_year_student"
        app:layout_constraintTop_toBottomOf="@id/username"/>



</androidx.constraintlayout.widget.ConstraintLayout>